# duck-hunt-neural

./: README.md  pyproject.toml
mindrove_armband/: __main__.py  signal_processor.py
