[tool.poetry]
name = "mindrove-armband"
version = "0.1.0"
description = ""
authors = ["binhphammindrove <phamtuanbinh1504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mindrove = "^5.1.4"
pyautogui = "^0.9.54"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
